# vulkan-guide-follow

./: CMakeLists.txt  README.md
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  textured_lit.frag  tri_mesh.vert  triangle.vert
src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
